--- a/linklist.paging.html
+++ b/linklist.paging.html
@@ -1,4 +1,4 @@
-<div class="linklist-paging pure-u-1-2">
+<div class="linklist-paging pure-u-1 pure-u-lg-1-2">
     <div class="linklist-pages">
       {if="$next_page_url"}
         <a href="{$next_page_url}" class="paging_newer">
@@ -30,11 +30,8 @@
            class={if="$untaggedonly"}"filter-on"{else}"filter-off"{/if}
         ><i class="fa fa-tag" aria-hidden="true"></i></a>
         <a href="#" aria-label="{'Select all'|t}" title="{'Select all'|t}"
-           class="filter-off select-all-button pure-u-0 pure-u-lg-visible"
+           class="filter-off select-all-button"
         ><i class="fa fa-check-square-o" aria-hidden="true"></i></a>
-        <a href="#" class="filter-off fold-all pure-u-lg-0" aria-label="{'Fold all'|t}" title="{'Fold all'|t}">
-          <i class="fa fa-chevron-up" aria-hidden="true"></i>
-        </a>
         {loop="$action_plugin"}
           {$value.attr.class=isset($value.attr.class) ? $value.attr.class : ''}
           {$value.attr.class=!empty($value.on) ? $value.attr.class .' filter-on' : $value.attr.class .' filter-off'}
@@ -47,16 +44,15 @@
         {/loop}
       {/if}
 
-    <div class="linksperpage">
-      <form method="GET" class="pure-u-0 pure-u-lg-visible" action="{$base_path}/links-per-page">
-        <label class="pure-u-0 pure-u-lg-visible">
-        <input type="text" name="nb" placeholder="133" value="{$links_per_page}">{'Links per page'|t}</label>
-    </div>
+    	<div class="linksperpage">
+      	<form method="GET" class="" action="{$base_path}/links-per-page">
+        	<label class="">
+        	<input type="text" name="nb" placeholder="133" value="{$links_per_page}"><span class="pure-u-lg-visible">{'Links per page'|t}</span></label>
+      	</form>
+    	</div>
 
-      </form>
-      <a href="#" class="filter-off fold-all pure-u-0 pure-u-lg-visible" aria-label="{'Fold all'|t}" title="{'Fold all'|t}">
+		<a href="#" class="filter-off fold-all" aria-label="{'Fold all'|t}" title="{'Fold all'|t}">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
-      </a>
-    </div>
-    </div>
+		</a>
+	</div>
 </div>
