--- a/linklist.html
+++ b/linklist.html
@@ -174,9 +174,9 @@ den="true"></i></span>
 
 	<div class="linklist-item-tags pure-u-1 pure-u-lg-16-24">
 		{if="$is_logged_in"}
-			<span class="ctrl-checkbox">
-			<input type="checkbox" class="link-checkbox" value="{$value.id}">
-			</span>
+			<label class="ctrl-checkbox">
+			<input type="checkbox" class="link-checkbox" title="Select link" value="{$value.id}">
+			</label>
 		{/if}
 
 		{if="$value.tags"}
