--- a/tag.list.html
+++ b/tag.list.html
@@ -6,38 +6,30 @@
 <body>
 {include="page.header"}
 
-{include="tag.sort"}
-
 <div class="pure-g pure-g-full">
-  <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-visitor">
-    {$countTags=count($tags)}
-    <h2 class="window-title">{'Tag list'|t} - {$countTags} {'tags'|t}</h2>
-    {if="!empty($search_tags)"}
-      <p class="center">
-        <a href="{$base_path}/?searchtags={$search_tags|urlencode}" class="pure-button pure-button-shaarli">
-          {'List all links with those tags'|t}
-        </a>
-      </p>
-    {/if}
+  <div class="pure-u-lg-2-24"></div>
+  <div class="pure-u-1 pure-u-lg-20-24 page-form page-visitor">
+    {include="tag.sort"}
 
-    <div id="search-tagcloud" class="pure-g searchform-block search-tagcloud">
-      <div class="pure-u-lg-1-4"></div>
-      <div class="pure-u-1 pure-u-lg-1-2">
-        <form method="GET">
-          <input type="hidden" name="do" value="taglist">
-          <input type="text" name="searchtags" aria-label="{'Filter by tag'|t}" placeholder="{'Filter by tag'|t}"
+    {$countTags=count($tags)}
+    <h2 class="window-title">{'Tag list'|t} &middot; {$countTags} {'tags'|t}</h2>
+
+    <form id="search-tagcloud" method="GET">
+        <input type="hidden" name="do" value="taglist">
+        <input type="text" name="searchtags" aria-label="{'Filter by tag'|t}" placeholder="{'Filter by tag'|t}"
                  {if="!empty($search_tags)"}
                  value="{$search_tags}"
                  {/if}
           autocomplete="off" data-multiple data-autofirst data-minChars="1"
           data-list="{loop="$tags"}{$key}, {/loop}"
           >
-          <button type="submit" class="search-button" aria-label="{'Search'|t}"><i class="fa fa-search" aria-hidden="true"></i></button>
-        </form>
-      </div>
-      <div class="pure-u-lg-1-4"></div>
-    </div>
+
+        <button type="submit" class="search-button" aria-label="{'Search'|t}"><i class="fa fa-search" aria-hidden="true"></i></button>
+
+        {if="!empty($search_tags)"}
+          <a href="{$base_path}/?searchtags={$search_tags|urlencode}" class="pure-button">{'Show links'|t}</a>
+        {/if}
+    </form>
 
     <div id="plugin_zone_start_tagcloud" class="plugin_zone">
       {loop="$plugin_start_zone"}
@@ -47,22 +39,21 @@
 
     <div id="taglist" class="taglist-container">
       {loop="tags"}
-        <div class="tag-list-item pure-g" data-tag="{$key}">
-          <div class="pure-u-1">
+        <div class="tag-list-item" data-tag="{$key}">
+            <a href="{$base_path}/?searchtags={$key|urlencode} {$search_tags|urlencode}" class="tag-link">{$key}</a>
+            <a href="{$base_path}/add-tag/{$key|urlencode}" title="{'Filter by tag'|t}" class="count">{$value}</a>
+
             {if="$is_logged_in===true"}
-              <a href="#" class="delete-tag" aria-label="{'Delete'|t}"><i class="fa fa-trash" aria-hidden="true"></i></a>&nbsp;&nbsp;
               <a href="{$base_path}/admin/tags?fromtag={$key|urlencode}" class="rename-tag" aria-label="{'Rename tag'|t}">
                 <i class="fa fa-pencil-square-o {$key}" aria-hidden="true"></i>
               </a>
+              <a href="#" class="delete-tag" aria-label="{'Delete'|t}"><i class="fa fa-trash" aria-hidden="true"></i></a>
             {/if}
-
-            <a href="{$base_path}/add-tag/{$key|urlencode}" title="{'Filter by tag'|t}" class="count">{$value}</a>
-            <a href="{$base_path}/?searchtags={$key|urlencode} {$search_tags|urlencode}" class="tag-link">{$key}</a>
 
             {loop="$value.tag_plugin"}
               {$value}
             {/loop}
-          </div>
+
           {if="$is_logged_in===true"}
             <div class="rename-tag-form pure-u-1">
               <input type="text" name="{$key}" value="{$key}" class="rename-tag-input" />
