--- a/tag.sort.html
+++ b/tag.sort.html
@@ -1,8 +1,5 @@
-<div class="pure-g">
-  <div class="pure-u-1 pure-alert pure-alert-success tag-sort">
-    {'Sort by:'|t}
+<div class="tag-sort">
     <a href="{$base_path}/tags/cloud">{'Cloud'|t}</a> &middot;
     <a href="{$base_path}/tags/list?sort=usage">{'Most used'|t}</a> &middot;
     <a href="{$base_path}/tags/list?sort=alpha">{'Alphabetical'|t}</a>
-  </div>
 </div>
