Remove page-form-light and consolidated config buttons

--- a/changetag.html
+++ b/changetag.html
@@ -7,7 +7,7 @@
 {include="page.header"}
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
-  <div id="addlink-form" class="page-form page-form-light pure-u-20-24">
+  <div id="addlink-form" class="page-form pure-u-20-24">
     <h2 class="window-title">{"Manage tags"|t}</h2>
     <form method="POST" action="{$base_path}/admin/tags" name="changetag" id="changetag">
       <div>
