--- a/pluginsadmin.html
+++ b/pluginsadmin.html
@@ -115,7 +115,7 @@
 <form action="{$base_path}/admin/plugins" method="POST">
   <div class="pure-g pure-g-full">
     <div class="pure-u-2-24"></div>
-    <div class="pure-u-20-24 page-form page-form-light">
+    <div class="page-form pure-u-20-24">
       <h2 class="window-title">{'Plugin configuration'|t}</h2>
       <section id="plugin_parameters">
         <div>
