--- a/thumbnails.html
+++ b/thumbnails.html
@@ -8,7 +8,7 @@
 
 <div class="pure-g pure-g-full thumbnails-page-container">
   <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-form-light">
+  <div class="page-form pure-u-20-24">
     <h2 class="window-title">{'Thumbnails update'|t}</h2>
 
     <div class="pure-g">
