--- a/loginform.html
+++ b/loginform.html
@@ -7,7 +7,7 @@
 {include="page.header"}
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
-  <div id="login-form" class="page-form page-form-light pure-u-20-24 login-form-container">
+  <div id="login-form" class="page-form pure-u-20-24 login-form-container">
     <form method="post" name="loginform">
       <h2 class="window-title">{'Login'|t}</h2>
       <div>
