--- a/tools.html
+++ b/tools.html
@@ -8,48 +8,36 @@
 
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-form-light">
+  <div class="page-form pure-u-20-24">
     <h2 class="window-title">{'Settings'|t}</h2>
     <div class="tools-item">
-      <a href="{$base_path}/admin/configure" title="{'Change Shaarli settings: title, timezone, etc.'|t}">
-        <span class="pure-button">{'Configure your Shaarli'|t}</span>
+      <a href="{$base_path}/admin/configure" title="{'Change Shaarli settings: title, timezone, etc.'|t}" class="pure-button">
+        {'Configure your Shaarli'|t}
       </a>
     </div>
     <div class="tools-item">
-      <a href="{$base_path}/admin/plugins" title="{'Enable, disable and configure plugins'|t}">
-        <span class="pure-button">{'Plugin administration'|t}</span>
-      </a>
+      <a href="{$base_path}/admin/plugins" title="{'Enable, disable and configure plugins'|t}" class="pure-button">{'Plugin administration'|t}</a>
     </div>
     {if="!$openshaarli"}
       <div class="tools-item">
-        <a href="{$base_path}/admin/password" title="{'Change your password'|t}">
-          <span class="pure-button">{'Change password'|t}</span>
-        </a>
+        <a href="{$base_path}/admin/password" title="{'Change your password'|t}" class="pure-button">{'Change password'|t}</a>
       </div>
     {/if}
     <div class="tools-item">
-      <a href="{$base_path}/admin/tags" title="{'Rename or delete a tag in all links'|t}">
-        <span class="pure-button">{'Manage tags'|t}</span>
-      </a>
+      <a href="{$base_path}/admin/tags" title="{'Rename or delete a tag in all links'|t}" class="pure-button">{'Manage tags'|t}</a>
     </div>
     <div class="tools-item">
       <a href="{$base_path}/admin/import"
-         title="{'Import Netscape HTML bookmarks (as exported from Firefox, Chrome, Opera, delicious...)'|t}">
-        <span class="pure-button">{'Import links'|t}</span>
-      </a>
+         title="{'Import Netscape HTML bookmarks (as exported from Firefox, Chrome, Opera, delicious...)'|t}" class="pure-button">{'Import links'|t}</a>
     </div>
     <div class="tools-item">
       <a href="{$base_path}/admin/export"
-         title="{'Export Netscape HTML bookmarks (which can be imported in Firefox, Chrome, Opera, delicious...)'|t}">
-        <span class="pure-button">{'Export database'|t}</span>
-      </a>
+         title="{'Export Netscape HTML bookmarks (which can be imported in Firefox, Chrome, Opera, delicious...)'|t}" class="pure-button">{'Export database'|t}</a>
     </div>
 
     {if="$thumbnails_enabled"}
       <div class="tools-item">
-        <a href="{$base_path}/admin/thumbnails" title="{'Synchronize all link thumbnails'|t}">
-          <span class="pure-button">{'Synchronize thumbnails'|t}</span>
-        </a>
+        <a href="{$base_path}/admin/thumbnails" title="{'Synchronize all link thumbnails'|t}" class="pure-button">{'Synchronize thumbnails'|t}</a>
       </div>
     {/if}
 
@@ -66,7 +54,7 @@
 
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-form-light">
+  <div class="page-form pure-u-20-24">
     <h2 class="window-title">Bookmarklets</h2>
     <p>
       {'Drag one of these button to your bookmarks toolbar or right-click it and "Bookmark This Link"'|t},
@@ -75,7 +63,7 @@
     <div class="tools-item">
       <a title="{'Drag this link to your bookmarks toolbar or right-click it and Bookmark This Link'|t},
                 {'then click ✚Shaare link button in any page you want to share'|t}"
-         class="bookmarklet-link"
+         class="bookmarklet-link pure-button"
          href="javascript:(
           function(){
             var%20url%20=%20location.href;
@@ -92,14 +80,12 @@
               '&amp;source=bookmarklet','_blank','menubar=no,height=800,width=600,toolbar=no,scrollbars=yes,status=no,dialog=1'
             );
           }
-        )();">
-        <span class="pure-button">✚ {'Shaare link'|t}</span>
-      </a>
+        )();">✚ {'Shaare link'|t}</a>
     </div>
     <div class="tools-item">
       <a title="{'Drag this link to your bookmarks toolbar or right-click it and Bookmark This Link'|t},
                 {'Then click ✚Add Note button anytime to start composing a private Note (text post) to your Shaarli'|t}"
-         class="bookmarklet-link"
+         class="bookmarklet-link pure-button"
          href="javascript:(
           function(){
             var%20desc=document.getSelection().toString();
@@ -113,41 +99,31 @@
               '&amp;source=bookmarklet','_blank','menubar=no,height=800,width=600,toolbar=no,scrollbars=yes,status=no,dialog=1'
             );
           }
-        )();">
-        <span class="pure-button">✚ {'Add Note'|t}</span>
-      </a>
+        )();">✚ {'Add Note'|t}</a>
     </div>
   </div>
 </div>
 
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-form-light">
+  <div class="page-form pure-u-20-24">
     <h2 class="window-title">{'3rd party'|t}</h2>
     <div class="tools-item">
-      <a href="https://addons.mozilla.org/fr/firefox/addon/shaarli/">
-        <span class="pure-button">Firefox {'plugin'|t}</span>
+      <a href="https://addons.mozilla.org/fr/firefox/addon/shaarli/" class="pure-button">Firefox {'plugin'|t}</a>
+    </div>
+    <div class="tools-item">
+      <a href="https://chrome.google.com/webstore/detail/shiny-shaarli/hajdfkmbdmadjmmpkkbbcnllepomekin" class="pure-button">Chrome {'plugin'|t}</a>
+    </div>
+    <div class="tools-item">
+      <a href="https://play.google.com/store/apps/details?id=com.dimtion.shaarlier&hl=fr" class="pure-button">Android Shaarlier</a>
       </a>
     </div>
     <div class="tools-item">
-      <a href="https://chrome.google.com/webstore/detail/shiny-shaarli/hajdfkmbdmadjmmpkkbbcnllepomekin">
-        <span class="pure-button">Chrome {'plugin'|t}</span>
-      </a>
-    </div>
-    <div class="tools-item">
-      <a href="https://play.google.com/store/apps/details?id=com.dimtion.shaarlier&hl=fr">
-        <span class="pure-button">Android Shaarlier</span>
-      </a>
-    </div>
-    <div class="tools-item">
-      <a href="https://stakali.toneiv.eu/">
-        <span class="pure-button">Android Stakali</span>
-      </a>
+      <a href="https://stakali.toneiv.eu/" class="pure-button">Android Stakali</a>
     </div>
     <div class="tools-item">
       <a href="https://itunes.apple.com/app/ShaarliOS/id1027441388?mt=8"
-         title="iOS">
-        <span class="pure-button">iOS</span>
+         title="iOS" class="pure-button">iOS</a>
       </a>
     </div>
   </div>
