Updated all page forms

--- a/addlink.html
+++ b/addlink.html
@@ -14,7 +14,7 @@
         <label for="shaare">{'URL or leave empty to post a note'|t}</label>
         <input type="text" name="post" id="shaare" class="autofocus">
       </div>
-      <div>
+      <div class="submit-buttons">
         <input type="submit" value="{'Add link'|t}">
       </div>
     </form>
