--- a/changepassword.html
+++ b/changepassword.html
@@ -17,8 +17,8 @@
         <input type="password" name="setpassword" aria-label="{'New password'|t}" placeholder="{'New password'|t}">
       </div>
       <input type="hidden" name="token" value="{$token}">
-      <div>
-        <input type="submit" value="{'Change'|t}">
+      <div class="submit-buttons">
+        <input type="submit" value="{'Change password'|t}">
       </div>
     </form>
   </div>
