--- a/page.header.html
+++ b/page.header.html
@@ -136,7 +136,7 @@
   {/if}
 
 {if="!empty($newVersion) || !empty($versionError)"}
-  <div class="pure-g new-version-message pure-alert pure-alert-warning pure-alert-closable">
+  <div class="pure-g pure-g-full new-version-message pure-alert pure-alert-warning pure-alert-closable">
     <div class="pure-u-2-24"></div>
     {if="$newVersion"}
       <div class="pure-u-20-24">
@@ -156,7 +156,7 @@
 {/if}
 
 {if="!empty($plugin_errors) && $is_logged_in"}
-  <div class="pure-g new-version-message pure-alert pure-alert-error pure-alert-closable" id="shaarli-errors-alert">
+  <div class="pure-g pure-g-full new-version-message pure-alert pure-alert-error pure-alert-closable" id="shaarli-errors-alert">
     <div class="pure-u-2-24"></div>
     <div class="pure-u-20-24">
         {loop="plugin_errors"}
@@ -170,7 +170,7 @@
 {/if}
 
 {if="!empty($global_errors)"}
-  <div class="pure-g header-alert-message pure-alert pure-alert-error pure-alert-closable" id="shaarli-errors-alert">
+  <div class="pure-g pure-g-full header-alert-message pure-alert pure-alert-error pure-alert-closable" id="shaarli-errors-alert">
   <div class="pure-u-2-24"></div>
     <div class="pure-u-20-24">
       {loop="$global_errors"}
@@ -184,7 +184,7 @@
 {/if}
 
 {if="!empty($global_warnings)"}
-  <div class="pure-g header-alert-message pure-alert pure-alert-warning pure-alert-closable" id="shaarli-warnings-alert">
+  <div class="pure-g pure-g-full header-alert-message pure-alert pure-alert-warning pure-alert-closable" id="shaarli-warnings-alert">
     <div class="pure-u-2-24"></div>
     <div class="pure-u-20-24">
       {loop="global_warnings"}
@@ -198,7 +198,7 @@
 {/if}
 
 {if="!empty($global_successes)"}
-  <div class="pure-g header-alert-message new-version-message pure-alert pure-alert-success pure-alert-closable" id="shaarli-success-alert">
+  <div class="pure-g pure-g-full header-alert-message new-version-message pure-alert pure-alert-success pure-alert-closable" id="shaarli-success-alert">
     <div class="pure-u-2-24"></div>
     <div class="pure-u-20-24">
       {loop="$global_successes"}
