--- a/import.html
+++ b/import.html
@@ -6,80 +6,56 @@
 <body>
 {include="page.header"}
 
-<form method="POST" action="{$base_path}/admin/import" enctype="multipart/form-data" name="uploadform" id="uploadform">
-  <div class="pure-g pure-g-full">
-    <div class="pure-u-2-24"></div>
-    <div class="pure-u-20-24 page-form page-form-complete">
-      <div>
-        <h2 class="window-title">{"Import Database"|t}</h2>
-      </div>
+<div class="pure-g pure-g-full">
+<div class="pure-u-2-24"></div>
+<form method="POST" action="{$base_path}/admin/import" enctype="multipart/form-data" name="uploadform" id="uploadform" class="page-form pure-u-20-24">
+  <h2 class="window-title">{"Import Database"|t}</h2>
+  <input type="hidden" name="token" value="{$token}">
 
-      <input type="hidden" name="token" value="{$token}">
-      <div class="center import-field-container" id="import-field">
-        <input type="hidden" name="MAX_FILE_SIZE" value="{$maxfilesize}">
-        <input type="file" name="filetoupload">
-        <p><br>{'Maximum size allowed:'|t} <strong>{$maxfilesizeHuman}</strong></p>
-      </div>
+  <div class="import-field-container" id="import-field">
+	<input type="hidden" name="MAX_FILE_SIZE" value="{$maxfilesize}">
+	<input type="file" name="filetoupload">
+	<p><br>{'Maximum size allowed:'|t} <strong>{$maxfilesizeHuman}</strong></p>
+  </div>
 
-      <div class="pure-g">
-        <div class="pure-u-lg-1-3 pure-u-1">
-          <div class="form-label">
-            <label><span class="label-name">{'Visibility'|t}</span></label>
+          <div>
+            <label>{'Visibility'|t}</label>
           </div>
-        </div>
-        <div class="pure-u-lg-2-3 pure-u-1">
+
           <div class="radio-buttons">
-            <div>
+            <label>
               <input type="radio" name="privacy" value="default" checked="checked">
               {'Use values from the imported file, default to public'|t}
-            </div>
-            <div>
+            </label>
+            <label>
               <input type="radio" name="privacy" value="private">
               {'Import all bookmarks as private'|t}
-            </div>
-            <div>
+            </label>
+            <label>
               <input type="radio" name="privacy" value="public">
               {'Import all bookmarks as public'|t}
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="pure-g">
-        <div class="pure-u-lg-1-3 pure-u-7-8">
-          <div class="form-label">
-            <label for="overwrite">
-              <span class="label-name">{'Overwrite existing bookmarks'|t}</span><br>
-              <span class="label-desc">{'Duplicates based on URL'|t}</span>
             </label>
           </div>
-        </div>
-        <div class="pure-u-lg-2-3 pure-u-1-8">
-          <div class="form-input">
-            <input type="checkbox" name="overwrite" id="overwrite">
-          </div>
-        </div>
-      </div>
 
-      <div class="pure-g">
-        <div class="pure-u-lg-1-3 pure-u-1">
-          <div class="form-label">
+          <label class="checkbox">
+            <input type="checkbox" name="overwrite" id="overwrite">
+              <span class="label-name">{'Overwrite existing bookmarks'|t}</span><br>
+              <span class="label-desc">{'Duplicates based on URL'|t}</span>
+          </label>
+
+          <div>
             <label for="default_tags"><span class="label-name">{'Add default tags'|t}</span></label>
           </div>
-        </div>
-        <div class="pure-u-lg-2-3 pure-u-1">
+
           <div class="form-input">
             <input type="text" name="default_tags" id="default_tags" aria-label="{'Tag'|t}" placeholder="{'Tag'|t}">
           </div>
-        </div>
-      </div>
 
-      <div class="center">
+      <div class="submit-buttons">
         <input type="submit" name="import_file" value="{'Import'|t}">
       </div>
-    </div>
-  </div>
 </form>
+</div>
 
 {include="page.footer"}
 </body>
