--- a/install.html
+++ b/install.html
@@ -10,71 +10,38 @@
 {$ratioLabelMobile='7-8'}
 {$ratioInputMobile='1-8'}
 
-<form method="POST" action="{$base_path}/install" name="installform" id="installform">
 <div class="pure-g pure-g-full">
-  <div class="pure-u-2-24"></div>
-  <div class="pure-u-20-24 page-form page-form-complete">
-    <h2 class="window-title">{'Install Shaarli'|t}</h2>
+<div class="pure-u-2-24"></div>
+<form method="POST" action="{$base_path}/install" name="installform" id="installform" class="page-form pure-u-20-24">
 
-    <div class="center">
-      <p>{'It looks like it\'s the first time you run Shaarli. Please configure it.'|t}</p>
-    </div>
+<h2 class="window-title">{'Install Shaarli'|t}</h2>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-1">
-        <div class="form-label">
-          <label for="username">
+<p>{'It looks like it\'s the first time you run Shaarli. Please configure it.'|t}</p>
+
+<div>
+          <label>
             <span class="label-name">{'Username'|t}</span>
+            <input type="text" name="setlogin" id="username">
           </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1">
-        <div class="form-input">
-          <input type="text" name="setlogin" id="username">
-        </div>
-      </div>
-    </div>
+</div>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-1">
-        <div class="form-label">
+<div>
           <label for="password">
             <span class="label-name">{'Password'|t}</span>
+            <input type="password" name="setpassword" id="password">
           </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1">
-        <div class="form-input">
-          <input type="password" name="setpassword" id="password">
-        </div>
-      </div>
-    </div>
+</div>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-1">
-        <div class="form-label">
+<div>
           <label for="title">
             <span class="label-name">{'Shaarli title'|t}</span>
+            <input type="text" name="title" id="title" placeholder="{'My links'|t}">
           </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1">
-        <div class="form-input">
-          <input type="text" name="title" id="title" placeholder="{'My links'|t}">
-        </div>
-      </div>
-    </div>
+</div>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-1">
-        <div class="form-label">
+<div>
           <label for="language">
             <span class="label-name">{'Language'|t}</span>
-          </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1">
-        <div class="form-input">
           <select name="language" id="language" class="align">
             {loop="$languages"}
               <option value="{$key}">
@@ -82,23 +49,13 @@
               </option>
             {/loop}
           </select>
-        </div>
-      </div>
-    </div>
-
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-1">
-        <div class="form-label">
-          <label>
-            <span class="label-name">{'Timezone'|t}</span><br>
-            <span class="label-desc">{'Continent'|t} &middot; {'City'|t}</span>
           </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1">
-        <div class="form-input">
-          <div class="timezone">
-            <select id="continent" name="continent">
+</div>
+
+<p class="timezone">
+<label>
+<span class="label-name">{'Timezone'|t}</span><br>
+<select id="continent" name="continent">
               {loop="$continents"}
                 {if="$key !== 'selected'"}
                   <option value="{$value}" {if="$continents.selected === $value"}selected{/if}>
@@ -118,51 +75,35 @@
                 {/if}
               {/loop}
             </select>
-          </div>
-        </div>
-      </div>
-    </div>
+<br><span class="label-desc">{'Continent'|t} &middot; {'City'|t}</span>
+</label>
+</p>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-7-8">
-        <div class="form-label">
-          <label for="update">
+<div>
+<label class="checkbox">
+          <input type="checkbox" name="updateCheck" id="update" checked="checked">
             <span class="label-name">{'Check updates'|t}</span><br>
             <span class="label-desc">
               {'Notify me when a new release is ready'|t}
             </span>
           </label>
         </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-1-8">
-        <div class="form-input">
-          <input type="checkbox" name="updateCheck" id="update" checked="checked">
-        </div>
-      </div>
-    </div>
 
-    <div class="pure-g">
-      <div class="pure-u-lg-{$ratioLabel} pure-u-{$ratioLabelMobile}">
-        <div class="form-label">
-          <label for="enableApi">
+<div>
+          <label class="checkbox">
+          <input type="checkbox" name="enableApi" id="enableApi" checked />
             <span class="label-name">{'Enable REST API'|t}</span><br>
             <span class="label-desc">{'Allow third party software to use Shaarli such as mobile application'|t}</span>
           </label>
-        </div>
-      </div>
-      <div class="pure-u-lg-{$ratioInput} pure-u-{$ratioInputMobile}">
-        <div class="form-input">
-          <input type="checkbox" name="enableApi" id="enableApi" checked />
-        </div>
-      </div>
-    </div>
+</div>
 
-    <div class="center">
+    <div class="submit-buttons">
       <input type="submit" value="{'Install'|t}" name="Save">
     </div>
-  </div>
-</div>
+
 </form>
+</div>
+
 {include="page.footer"}
 </body>
 </html>
