--- a/daily.html
+++ b/daily.html
@@ -23,7 +23,7 @@
     <div class="daily-about">
 
       <div class="pure-g">
-        <div class="pure-u-lg-1-3 pure-u-1 center">
+        <div class="pure-u-lg-1-3 pure-u-1">
           {if="$previousday"}
             <a href="{$base_path}/daily?day={$previousday}">
               <i class="fa fa-arrow-left"></i>
@@ -31,10 +31,10 @@
             </a>
           {/if}
         </div>
-        <div class="daily-desc pure-u-lg-1-3 pure-u-1 center">
+        <div class="daily-desc pure-u-lg-1-3 pure-u-1">
           {'All links of one day in a single page.'|t}
         </div>
-        <div class="pure-u-lg-1-3 pure-u-1 center">
+        <div class="pure-u-lg-1-3 pure-u-1">
           {if="$nextday"}
             <a href="{$base_path}/daily?day={$nextday}">
               {'Next day'|t}
@@ -68,7 +68,7 @@
               {loop="value"}
                 {$link=$value}
                 <div class="daily-entry">
-                  <div class="daily-entry-title center">
+                  <div class="daily-entry-title">
                     <a href="{$base_path}/?{$link.shorturl}" title="{'Permalink'|t}">
                       <i class="fa fa-link"></i>
                     </a>
@@ -83,7 +83,7 @@
                   {/if}
                   <div class="daily-entry-description">{$link.formatedDescription}</div>
                   {if="$link.tags"}
-                    <div class="daily-entry-tags center">
+                    <div class="daily-entry-tags">
                       {loop="link.taglist"}
                         <span class="label label-tag">
                           {$value}
