Fixed issues with links to other pages

--- a/includes.html
+++ b/includes.html
@@ -12,7 +12,7 @@
   <link type="text/css" rel="stylesheet" href="{$asset_path}/css/markdown.min.css?v={$version_hash}#" />
 {/if}
 {loop="$plugins_includes.css_files"}
-  <link type="text/css" rel="stylesheet" href="{$base_path}/{$value}?v={$version_hash}#"/>
+  <link type="text/css" rel="stylesheet" href="{$value}?v={$version_hash}#"/>
 {/loop}
 {if="is_file('data/user.css')"}
   <link type="text/css" rel="stylesheet" href="{$base_path}/data/user.css#" />
