--- a/page.footer.html
+++ b/page.footer.html
@@ -25,7 +25,7 @@
 {/loop}
 
 {loop="$plugins_footer.js_files"}
-	<script src="{$base_path}/{$value}#"></script>
+    <script src="{$value}#"></script>
 {/loop}
 
 <div id="js-translations" class="hidden">
