--- a/page.header.html
+++ b/page.header.html
@@ -77,7 +77,7 @@
     </div>
 
 <div id="search-linklist" class="searchform-block search-linklist pure-u-1 pure-u-lg-1-2">
-  <form method="GET" class="pure-form searchform" name="searchform" action="{$basepath}/">
+  <form method="GET" class="pure-form searchform" name="searchform" action="{$base_path}/">
     <input type="text" name="searchterm" class="searchterm" aria-label="{'Search text'|t}" placeholder="{'Search text'|t}"
            {if="!empty($search_term)"}
            value="{$search_term}"
